[package]
name = "namada_benchmarks"
description = "Namada benchmarks"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bench]]
name = "whitelisted_txs"
harness = false
path = "txs.rs"

[[bench]]
name = "whitelisted_vps"
harness = false
path = "vps.rs"

[[bench]]
name = "native_vps"
harness = false
path = "native_vps.rs"

[[bench]]
name = "process_wrapper"
harness = false
path = "process_wrapper.rs"

[[bench]]
name = "host_env"
harness = false
path = "host_env.rs"

[dependencies]

[dev-dependencies]
namada = { path = "../shared", features = ["std", "testing"] }
namada_apps = { path = "../apps", features = ["benches"] }
masp_primitives.workspace = true
borsh.workspace = true
borsh-ext.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
rand_core.workspace = true
rand.workspace = true
tempfile.workspace = true
sha2.workspace = true
