[package]
name = "namada_core"
description = "Namada core"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus", "ferveo-tpke"]
mainnet = []
ferveo-tpke = [
  "ferveo",
  "tpke",
  "ark-ec",
  "rand_core",
  "rand",
]
wasm-runtime = [
  "rayon",
]
# secp256k1 key signing, disabled in WASM build by default as it bloats the 
# build a lot
secp256k1-sign = [
  "libsecp256k1/hmac",
]

abciplus = [
  "ibc",
  "ibc-proto",
  "tendermint",
  "tendermint-proto",
]

ibc-mocks = [
  "ibc/mocks",
  "ibc/std",
]

ethers-derive = [
  "ethbridge-structs/ethers-derive"
]

# for integration tests and test utilies
testing = [
  "rand",
  "rand_core",
  "proptest",
]

[dependencies]
namada_macros = {path = "../macros"}
ark-bls12-381.workspace = true
ark-ec = {version = "0.3", optional = true}
ark-serialize.workspace = true
arse-merkle-tree.workspace = true
bech32.workspace = true
borsh.workspace = true
chrono.workspace = true
data-encoding.workspace = true
derivative.workspace = true
ed25519-consensus.workspace = true
ethabi.workspace = true
ethbridge-structs = { git = "https://github.com/heliaxdev/ethbridge-rs", tag = "v0.19.0" }
eyre.workspace = true
ferveo = {optional = true, git = "https://github.com/anoma/ferveo", rev = "e5abd0acc938da90140351a65a26472eb495ce4d"}
ferveo-common = {git = "https://github.com/anoma/ferveo", rev = "e5abd0acc938da90140351a65a26472eb495ce4d"}
tpke = {package = "group-threshold-cryptography", optional = true, git = "https://github.com/anoma/ferveo", rev = "e5abd0acc938da90140351a65a26472eb495ce4d"}
# TODO using the same version of tendermint-rs as we do here.
ibc = { git = "https://github.com/heliaxdev/cosmos-ibc-rs.git", rev = "634f4ede136d045dd6f1ff8f4984dd0006aa15f0", default-features = false, features = ["serde"], optional = true}
ibc-proto = {git = "https://github.com/heliaxdev/ibc-proto-rs.git", rev = "bb16e17a4d9260d5f20516a8eda43fa52377fad2", default-features = false, optional = true}
ics23.workspace = true
impl-num-traits = "0.1.2"
index-set.workspace = true
itertools.workspace = true
libsecp256k1.workspace = true
masp_primitives.workspace = true
num256.workspace = true
num-integer = "0.1.45"
num-rational.workspace = true
num-traits.workspace = true
proptest = {version = "1.2.0", optional = true}
prost.workspace = true
prost-types.workspace = true
rand = {version = "0.8", optional = true}
rand_core = {version = "0.6", optional = true}
rayon = {version = "=1.5.3", optional = true}
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tendermint = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "b7d1e5afc6f2ccb3fd1545c2174bab1cc48d7fa7", optional = true}
tendermint-proto = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "b7d1e5afc6f2ccb3fd1545c2174bab1cc48d7fa7", optional = true}
thiserror.workspace = true
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
tracing.workspace = true
uint = "0.9.5"
zeroize.workspace = true

[dev-dependencies]
assert_matches.workspace = true
libsecp256k1 = {workspace = true, features = ["hmac"]}
pretty_assertions.workspace = true
proptest.workspace = true
rand.workspace = true
rand_core.workspace = true
test-log.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
