[package]
name = "namada_core"
description = "Namada core"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus", "ferveo-tpke"]
mainnet = []
ferveo-tpke = [
  "ferveo",
  "tpke",
  "ark-ec",
  "rand_core",
  "rand",
]
wasm-runtime = [
  "rayon",
]

abciplus = [
  "ibc",
  "ibc-proto",
  "tendermint",
  "tendermint-proto",
]

ibc-mocks = [
  "ibc/mocks",
]

ethers-derive = [
  "ethbridge-structs/ethers-derive"
]

# for integration tests and test utilies
testing = [
  "rand",
  "rand_core",
  "proptest",
]

[dependencies]
namada_macros = {path = "../macros"}
ark-bls12-381.workspace = true
ark-ec = {version = "0.3", optional = true}
ark-serialize.workspace = true
arse-merkle-tree.workspace = true
bech32.workspace = true
borsh.workspace = true
chrono.workspace = true
data-encoding.workspace = true
derivative.workspace = true
ed25519-consensus.workspace = true
ethabi.workspace = true
ethbridge-structs.workspace = true
eyre.workspace = true
ferveo = {optional = true, git = "https://github.com/anoma/ferveo", rev = "e5abd0acc938da90140351a65a26472eb495ce4d"}
ferveo-common = {git = "https://github.com/anoma/ferveo", rev = "e5abd0acc938da90140351a65a26472eb495ce4d"}
tpke = {package = "group-threshold-cryptography", optional = true, git = "https://github.com/anoma/ferveo", rev = "e5abd0acc938da90140351a65a26472eb495ce4d"}
# TODO using the same version of tendermint-rs as we do here.
ibc = { git = "https://github.com/heliaxdev/cosmos-ibc-rs.git", rev = "38a827d3901e590b2935ee5b6b81b4d67c399560", features = ["serde"], optional = true}
ibc-proto = {git = "https://github.com/heliaxdev/ibc-proto-rs.git", rev = "31892ee743b2af017d5629b2af419ee20b6100c7", default-features = false, optional = true}
ics23.workspace = true
impl-num-traits = "0.1.2"
index-set.workspace = true
itertools.workspace = true
k256.workspace = true
masp_primitives.workspace = true
num256.workspace = true
num-integer = "0.1.45"
num-rational.workspace = true
num-traits.workspace = true
primitive-types.workspace = true
proptest = {version = "1.2.0", optional = true}
prost.workspace = true
prost-types.workspace = true
rand = {version = "0.8", optional = true}
rand_core = {version = "0.6", optional = true}
rayon = {version = "=1.5.3", optional = true}
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tendermint = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "b7d1e5afc6f2ccb3fd1545c2174bab1cc48d7fa7", optional = true}
tendermint-proto = { git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "b7d1e5afc6f2ccb3fd1545c2174bab1cc48d7fa7", optional = true}
thiserror.workspace = true
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
tracing.workspace = true
uint = "0.9.5"
zeroize.workspace = true

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
rand.workspace = true
rand_core.workspace = true
test-log.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
