[package]
name = "namada_core"
description = "Namada core"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["rand"]
mainnet = []
wasm-runtime = ["rayon"]
rand = ["dep:rand", "rand_core"]
ethers-derive = [
  "ethbridge-structs/ethers-derive"
]
# for integration tests and test utilies
testing = [
  "ibc-testkit",
  "rand",
  "proptest",
]

[dependencies]
namada_macros = {path = "../macros"}
ark-bls12-381.workspace = true
ark-serialize.workspace = true
arse-merkle-tree.workspace = true
bech32.workspace = true
borsh.workspace = true
borsh-ext.workspace = true
chrono.workspace = true
data-encoding.workspace = true
derivative.workspace = true
ed25519-consensus.workspace = true
ethabi.workspace = true
ethbridge-structs.workspace = true
eyre.workspace = true
ibc.workspace = true
ibc-derive.workspace = true
ibc-testkit = {workspace = true, optional = true}
ics23.workspace = true
impl-num-traits = "0.1.2"
index-set.workspace = true
itertools.workspace = true
k256.workspace = true
masp_primitives.workspace = true
num256.workspace = true
num-derive.workspace = true
num_enum = "0.7.0"
num-integer = "0.1.45"
num-rational.workspace = true
num-traits.workspace = true
primitive-types.workspace = true
proptest = {workspace = true, optional = true}
prost.workspace = true
prost-types.workspace = true
rand = {version = "0.8", optional = true}
rand_core = {version = "0.6", optional = true}
rayon = {version = "=1.5.3", optional = true}
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tendermint = {workspace = true}
tendermint-proto = {workspace = true}
thiserror.workspace = true
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
tracing.workspace = true
uint = "0.9.5"
zeroize.workspace = true

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
rand.workspace = true
rand_core.workspace = true
rayon = {version = "=1.5.3"}
test-log.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
