[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Namada encoding spec generator"
edition = "2021"
license = "GPL-3.0"
name = "namada_encoding_spec"
readme = "../README.md"
resolver = "2"
version = "0.12.2"

[features]
default = ["abciplus"]
abciplus = [
  "namada/abciplus"
]

[dependencies]
namada = {path = "../shared", default-features = false}
borsh = "0.9.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
madato = "0.5.3"
