[package]
name = "namada_encoding_spec"
description = "Namada encoding spec generator"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus"]
abciplus = [
  "namada/abciplus"
]

[dependencies]
namada = {path = "../shared"}
borsh = "0.9.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
madato = "0.5.3"
