[package]
name = "namada_ethereum_bridge"
description = "The Namada Ethereum bridge library crate"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
testing = [
    "namada_core/testing",
]

[dependencies]
namada_core = {path = "../core", default-features = false, features = ["ethers-derive"]}
namada_macros = {path = "../macros"}
namada_proof_of_stake = {path = "../proof_of_stake", default-features = false}
borsh.workspace = true
borsh-ext.workspace = true
ethers.workspace = true
eyre.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tendermint = {workspace = true}
tendermint-rpc = {workspace = true}
tendermint-proto = {workspace = true}
thiserror.workspace = true
tracing = "0.1.30"

[dev-dependencies]
# Added "testing" feature.
namada_core = {path = "../core", default-features = false, features = ["ethers-derive", "testing"]}
namada_proof_of_stake = {path = "../proof_of_stake", default-features = false, features = ["testing"]}
assert_matches.workspace = true
data-encoding.workspace = true
ethabi.workspace = true
toml.workspace = true
