[package]
name = "namada_examples"
description = "Namada examples"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[example]]
name = "generate-txs"
path = "generate_txs.rs"

[[example]]
name = "tx-schema"
path = "tx_schema.rs"

[[example]]
name = "make-db-migration"
path = "make-db-migration.rs"

[features]
namada-eth-bridge = ["namada_sdk/namada-eth-bridge"]

[dev-dependencies]
masp_primitives = { workspace = true, features = ["transparent-inputs"] }
masp_proofs = { workspace = true, default-features = false, features = ["local-prover", "download-params"] }
namada_apps_lib = {path = "../crates/apps_lib", features = ["migrations"]}
namada_macros = {path = "../crates/macros"}
namada_migrations = {path = "../crates/migrations"}
namada_parameters = { path = "../crates/parameters"}
namada_trans_token = {path = "../crates/trans_token", features = ["migrations"]}
namada_sdk = { path = "../crates/sdk", default-features = false, features = ["std", "testing", "migrations"] }
namada_shielded_token = { path = "../crates/shielded_token" }

borsh.workspace = true
data-encoding.workspace = true
proptest.workspace = true
serde_json.workspace = true
tokio = {workspace = true, default-features = false}
