[package]
name = "namada_examples"
description = "Namada examples"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[example]]
name = "generate-txs"
path = "generate_txs.rs"

[[example]]
name = "shielded-rewards"
path = "shielded_rewards.rs"

[[example]]
name = "tx-schema"
path = "tx_schema.rs"

[[example]]
name = "make-db-migration"
path = "make-db-migration.rs"

[[example]]
name = "housefire-max-tx-bytes"
path = "housefire-max-tx-bytes.rs"

[features]
default = ["migrations"]
migrations = []
namada-eth-bridge = ["namada_sdk/namada-eth-bridge"]

[dev-dependencies]
masp_primitives = { workspace = true, features = ["transparent-inputs"] }
masp_proofs = { workspace = true, default-features = false, features = [
    "local-prover",
    "download-params",
] }
namada_apps_lib = { workspace = true, features = ["migrations"] }
namada_core = { workspace = true }
namada_macros = { workspace = true }
namada_migrations = { workspace = true, features = ["masp"] }
namada_parameters = { workspace = true }
namada_trans_token = { workspace = true, features = ["migrations"] }
namada_sdk = { workspace = true, default-features = false, features = [
    "std",
    "testing",
    "migrations",
] }
namada_shielded_token = { workspace = true }

borsh.workspace = true
data-encoding.workspace = true
linkme.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, default-features = false }
toml.workspace = true
