[package]
name = "namada_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
namada_node = { path = "../crates/node", features = ["testing"] }
namada_tx = { path = "../crates/tx", features = ["arbitrary"] }
masp_primitives = { workspace = true, features = ["arbitrary"] }

lazy_static.workspace = true
libfuzzer-sys = "0.4"

[[bin]]
name = "txs_mempool"
path = "fuzz_targets/txs_mempool.rs"
test = false
doc = false
bench = false

[[bin]]
name = "txs_prepare_proposal"
path = "fuzz_targets/txs_prepare_proposal.rs"
test = false
doc = false
bench = false

[[bin]]
name = "txs_process_proposal"
path = "fuzz_targets/txs_process_proposal.rs"
test = false
doc = false
bench = false
