[package]
name = "namada_fuzz"
version = "0.150.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
namada_apps_lib = { workspace = true, features = ["testing"] }
namada_core = { workspace = true, features = ["testing"] }
namada_node = { workspace = true, features = ["testing"] }
namada_sdk = { workspace = true, features = ["testing", "arbitrary"] }
namada_tx = { workspace = true, features = ["arbitrary"] }

arbitrary = { workspace = true }
data-encoding = { workspace = true }
lazy_static.workspace = true
libfuzzer-sys.workspace = true
masp_primitives = { workspace = true, features = ["arbitrary"] }
prost = { workspace = true }

[[bin]]
name = "txs_mempool"
path = "fuzz_targets/txs_mempool.rs"
test = false
doc = false
bench = false

[[bin]]
name = "txs_prepare_proposal"
path = "fuzz_targets/txs_prepare_proposal.rs"
test = false
doc = false
bench = false

[[bin]]
name = "txs_process_proposal"
path = "fuzz_targets/txs_process_proposal.rs"
test = false
doc = false
bench = false

[[bin]]
name = "txs_finalize_block"
path = "fuzz_targets/txs_finalize_block.rs"
test = false
doc = false
bench = false

[[bin]]
name = "txs_wasm_run"
path = "fuzz_targets/txs_wasm_run.rs"
test = false
doc = false
bench = false
