[package]
authors = ["Heliax <TODO@heliax.dev>"]
description = "Anoma node daemon"
edition = "2018"
name = "Anoma"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "anoma"
path = "src/lib/mod.rs"

# Anoma CLI that aggregates some common commands for the node and the client
[[bin]]
name = "anoma"
path = "src/bin/anoma/main.rs"

# Anoma node daemon
[[bin]]
name = "anomad"
path = "src/bin/anoma-node/main.rs"

# Anoma client
[[bin]]
name = "anomac"
path = "src/bin/anoma-client/main.rs"

[features]
default = ["std", "dev"]
# NOTE "dev" features that shouldn't be used in live networks are enabled by default for now
dev = []
std = ["ed25519-dalek/std", "rand/std", "rand_core/std"]

[dependencies]
abci = {git = "https://github.com/heliaxdev/rust-abci"}
base64 = "0.13.0"
blake2b-rs = "0.2.0"
byteorder = "1.4.2"
# https://github.com/clap-rs/clap/issues/1037
clap = {git = "https://github.com/clap-rs/clap/", tag = "v3.0.0-beta.2"}
ed25519-dalek = {version = "1.0.1", default-features = false, features = ["rand", "u64_backend"]}
env_logger = "0.8.2"
futures = "0.3"
hex = "0.4.2"
log = "0.4.14"
prost = "0.7"
rand = {version = "0.7", default-features = false}
rand_core = {version = "0.5", default-features = false}
rocksdb = "0.15"
serde_json = "1.0.62"
sha2 = "0.9.3"
# latest version is not released on crates
sparse-merkle-tree = {git = "https://github.com/jjyr/sparse-merkle-tree", tag = "v0.3.1-pre"}
tendermint-rpc = {version = "0.18.0", features = ["http-client"]}
tokio = {version = "1.0", features = ["full"]}

[dev-dependencies]
cargo-watch = "7.5.0"
clippy = "0.0.302"
rustfmt = "0.10.0"
