[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2018"
license = "GPL-3.0"
name = "matchmaker"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anoma_vm_env = {path = "../vm_env"}
borsh = "0.9.0"
petgraph = {version = "0.5.1", features = ["serde-1"]}
serde = "1.0.125"
serde_json = "1.0.64"
wee_alloc = "0.4.5"

[profile.release]
# smaller and faster wasm https://rustwasm.github.io/book/reference/code-size.html#compiling-with-link-time-optimizations-lto
lto = true
# simply terminate on panics, no unwinding
panic = "abort"
