[package]
name = "namada_merkle_tree"
description = "Namada merkle tree"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
namada_core = { path = "../core", default-features = false }
namada_ethereum_bridge = { path = "../ethereum_bridge" }

arse-merkle-tree.workspace = true
borsh.workspace = true
ics23.workspace = true
prost.workspace = true
thiserror.workspace = true
