[package]
name = "namada_parameters"
description = "Namada parameters"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
namada_core = { path = "../core" }
namada_macros = { path = "../macros" }
namada_storage = { path = "../storage" }

borsh.workspace = true
thiserror.workspace = true
