[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Namada Proof of Stake system"
edition = "2021"
license = "GPL-3.0"
name = "namada_proof_of_stake"
readme = "../README.md"
resolver = "2"
version = "0.15.3"

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
]
# testing helpers
testing = ["proptest"]

[dependencies]
namada_core = {path = "../core", default-features = false}
borsh = "0.9.1"
derivative = "2.2.0"
hex = "0.4.3"
once_cell = "1.8.0"
# A fork with state machine testing
proptest = {git = "https://github.com/heliaxdev/proptest", rev = "8f1b4abe7ebd35c0781bf9a00a4ee59833ffa2a1", optional = true}
rust_decimal = { version = "1.26.1", features = ["borsh"] }
rust_decimal_macros = "1.26.1"
thiserror = "1.0.38"
tracing = "0.1.30"
data-encoding = "2.3.2"


[dev-dependencies]
itertools = "0.10.5"
namada_core = {path = "../core", features = ["testing"]}
# A fork with state machine testing
proptest = {git = "https://github.com/heliaxdev/proptest", rev = "8f1b4abe7ebd35c0781bf9a00a4ee59833ffa2a1"}
test-log = {version = "0.2.7", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3.7", default-features = false, features = ["env-filter", "fmt"]}
