[package]
name = "namada_proof_of_stake"
description = "Namada Proof of Stake system"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
]
# testing helpers
testing = ["proptest"]

[dependencies]
namada_core = {path = "../core", default-features = false}
borsh = "0.9.1"
derivative = "2.2.0"
hex = "0.4.3"
once_cell = "1.8.0"
proptest = {version = "1.2.0", optional = true}
rust_decimal = { version = "=1.26.1", features = ["borsh"] }
rust_decimal_macros = "=1.26.1"
thiserror = "1.0.38"
tracing = "0.1.30"
data-encoding = "2.3.2"


[dev-dependencies]
itertools = "0.10.5"
namada_core = {path = "../core", features = ["testing"]}
proptest = "1.2.0"
proptest-state-machine = "0.1.0"
test-log = {version = "0.2.7", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3.7", default-features = false, features = ["env-filter", "fmt"]}
