[package]
name = "namada_proof_of_stake"
description = "Namada Proof of Stake system"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
]
# testing helpers
testing = ["proptest"]

[dependencies]
namada_core = {path = "../core", default-features = false}
borsh.workspace = true
data-encoding.workspace = true
derivative.workspace = true
once_cell.workspace = true
proptest = {version = "1.2.0", optional = true}
thiserror.workspace = true
tracing.workspace = true


[dev-dependencies]
namada_core = {path = "../core", features = ["testing"]}
itertools.workspace = true
proptest.workspace = true
proptest-state-machine.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
